# system7-poker-arena

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SKILL.md  decide_system7.py  docker-compose.yml  hybrid_system7.py  llm_system7.py  pokerkit  pyproject.toml  run_hybrid_system7.py  run_pvp.py  run_system7.py  s7_agents.py  s7_api.py  s7_batch.py  s7_dash.py  s7_evolve.py  s7_jobs.py  s7_mllm.py  s7_reads.py  s7_report.py  s7_stats.py  s7_strat.py  s7_test.py  s7_tracker.py  s7_wide_batch.sh  s7_wide_until.sh  system7_prompt.md
assets/: decide_baseline.py  decide_ranged.py  decide_textured.py
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  COACH-LOOP.md  DASHBOARD.md  PIPELINE.md  play.md  strategy.md
examples/: STRATEGY.md.template  agent.py  analyze.py  arena_client.py  cli.py  llm_agent.py  mock.py  prompt.md  replay.py  research_static_chart.py  selfplay.py  testing.py
examples/colab/: quickstart.ipynb
examples/skeletons/: always_call.py  (+2 more)
ladder/: build_bundle.py  strategy_template.py  submit_ladder.py  test_harness.py
paths/: build.md  guided.md  iterate.md  learn.md  quick.md  skip-hl.md  skip-research.md
references/: decide-function.md  heuristic-learning.md  optimization-levels.md  poker-eval-arena.md  reasoning-yaml.md  sandbox-recovery.md  stage-templates.md
strategies/: lag.json  s7-opus.json  system7-hu-ladder.json  system7-hu.json  tag.json  value.json  wide.json
tests/: test_llm_parser.py  test_smoke.py  test_stats_equity.py  test_system7.py  test_user_decide_example.py
web/: index.html
(+3 files in other folders)
